chat alignment issue resolved

--- a/src/pages/chats/Chats.module.css
+++ b/src/pages/chats/Chats.module.css
@@ -4,7 +4,7 @@
     padding: 12px;
     border-radius: 8px;
     margin-top: 0px;
-    height:100%
+    height:10%
   }
 
   .textContext{
